--- a/StocksApp/Views/_ViewImports.cshtml
+++ b/StocksApp/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@namespace StocksApp.Views
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @using StocksApp.Models
+@using ServiceContracts.DTOs
